--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/hariharanweb/ondc-adapter.git",
+  "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node src/app.js",
+    "start": "node --experimental-modules src/app.js",
     "test": "vitest --reporter verbose --globals",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src --fix"
   },
+
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5"
+  },
+  "dependencies": {
+    "csv-parse": "^5.3.6",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "fs": "^0.0.1-security",
+    "node-xlsx": "^0.21.0",
     "pre-commit": "^1.2.2",
     "vitest": "^0.29.2"
   },
