--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src --fix"
   },
-
-  "devDependencies": {
-    "eslint": "^8.36.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
-  },
   "dependencies": {
-    "csv-parse": "^5.3.6",
+    "csv-parse": "^5.3.6"
+  },
+  "devDependencies": {
     "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
