--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src --fix"
   },
   "dependencies": {
-    "csv-parse": "^5.3.6"
+    "csv-parse": "^5.3.6",
+    "node-jq": "^2.3.5"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
