--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-jq": "^2.3.5"
   },
   "devDependencies": {
+    "@vitest/coverage-c8": "^0.29.7",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
