Used optional chaining (?.) and nullish coalescing (??) operators to simplify the conditional checks and set default values.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     },
     "rules": {
       "import/extensions": "off"
-    }
+    },
+  "parserOptions": {
+    "ecmaVersion": 2020
   }
-   
+  }
