--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "csv-parse": "^5.3.6",
     "log4js": "^6.9.1",
+    "node-fetch": "^3.3.1",
     "node-jq": "^2.3.5"
   },
   "devDependencies": {
