--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "csv-parse": "^5.3.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "log4js": "^6.9.1",
     "node-fetch": "^3.3.1",
     "node-jq": "^2.3.5"
